--- a/src/modules/general/components/card/Card.scss
+++ b/src/modules/general/components/card/Card.scss
@@ -9,7 +9,8 @@
 	min-height: 300px;
 	height: auto;
 	max-height: 400px;
-	margin-bottom: 150px;
+	margin-bottom: 100px;
+	margin-top: 100px;
 	padding: 12px 25px;
 	text-decoration: none;
 	background-color: transparent;
@@ -17,7 +18,7 @@
 	.card-info {
 		display: flex;
 		flex-direction: column;
-		justify-content: start;
+		justify-content: flex-start;
 		width: 65%;
 		.card-header {
 			.name {
@@ -30,7 +31,7 @@
 		.card-main-info {
 			display: flex;
 			flex-direction: column;
-			justify-content: start;
+			justify-content: flex-start;
 			.info {
 				width: 90%;
 				padding: 15px 15px 15px 0;
