--- a/src/modules/general/pages/auth/Auth.scss
+++ b/src/modules/general/pages/auth/Auth.scss
@@ -34,6 +34,7 @@
 					font-size: 16px;
 					font-weight: 500;
 					color: lightgreen;
+					// color: lightgreen;
 					:active,
 					:hover {
 						outline: none;
