--- a/src/common/layout/header/Header.scss
+++ b/src/common/layout/header/Header.scss
@@ -1,23 +1,21 @@
 @import "../../../Variables.scss";
 
-a {
-	color: #dadce1;
-	text-decoration: none;
-}
-
 .header {
 	width: 100%;
 	height: 60px;
 	display: flex;
-	background-color: $bg-gark-color;
+	background-color: $header-gark-background-color;
 	flex-direction: row;
 	justify-content: flex-end;
-	color: $text-color-light;
+	color: $header-gark-text-color;
 	z-index: 1000;
+	a {
+		color: $header-gark-text-color;
+		text-decoration: none;
+	}
 	.navbar {
 		height: 59px;
 		width: auto;
-		background-color: $bg-gark-color;
 		padding: 0 2px;
 		display: flex;
 		flex-direction: row;
@@ -42,13 +40,14 @@ a {
 				flex-direction: column;
 				align-items: center;
 				justify-content: center;
+				:hover {
+					background-color: $header-gark-button-color-hover;
+				}
 				.icon-button {
-					color: #dadce1;
 					text-decoration: none;
 					width: auto;
 					height: 45px;
 					line-height: 45px;
-					background-color: $button-dark-color;
 					border-radius: 5px;
 					padding: 10px;
 					margin: 2px;
@@ -57,17 +56,15 @@ a {
 					align-items: center;
 					justify-content: center;
 					transition: filter 300ms;
-					:hover {
-						filter: brightness(1.2);
-					}
+					transition: all 0.35s ease;
 				}
 				.dropdown {
 					position: absolute;
 					top: 58px;
 					width: 250px;
 					transform: translateX(-45%);
-					background-color: $bg-gark-color;
-					border: 1px solid $button-dark-border-color;
+					background-color: $header-gark-background-color;
+					border: 1px solid $header-gark-border-color;
 					border-radius: 8px;
 					padding: 5px;
 					overflow: hidden;
@@ -79,14 +76,10 @@ a {
 						align-items: center;
 						border-radius: 8px;
 						transition: all 0.3s ease;
-						padding: 0.5rem;
-						:hover {
-							background-color: #e0a5265d;
-						}
+						padding: 10px;
 						.icon-button {
 							width: 35px;
 							height: 35px;
-							background-color: #484a4d5d;
 							border-radius: 5px;
 							padding: 5px;
 							margin: 2px;
