--- a/src/modules/general/pages/general/General.scss
+++ b/src/modules/general/pages/general/General.scss
@@ -1,101 +1,109 @@
 @import "../../../../Variables.scss";
 
 @keyframes animate {
-	0% {
-		opacity: 0;
-		transform: rotate(45deg) translate(-20px, -20px);
-	}
-	50% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-		transform: rotate(45deg) translate(20px, 20px);
-	}
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px);
+  }
 }
 
 .main {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	.colum-1 {
-		position: relative;
-		width: 100%;
-		height: 100vh;
-		display: flex;
-		flex-direction: column;
-		// justify-content: center;
-		background: url(../../../../common/images/bg.png);
-		background-color: $bg-gark-color;
-		background-repeat: no-repeat;
-		background-position-x: center;
-		background-size: cover;
-		box-shadow: inset 0px 150px 150px -10px $bg-gark-color, inset 0px -150px 150px -10px $bg-gark-color;
-		.main-title {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			width: 100%;
-			height: auto;
-			margin-top: 130px;
-			color: lightgreen;
-			font-size: 80px;
-			font-weight: 900;
-			text-align: center;
-		}
-		.main-info {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			width: 100%;
-			height: auto;
-			margin-top: 25px;
-			color: $text-color-light;
-			font-size: 24px;
-			font-weight: 900;
-			text-align: center;
-		}
-		.next {
-			position: absolute;
-			width: auto;
-			height: auto;
-			top: 80%;
-			right: 10%;
-			span {
-				display: block;
-				width: 30px;
-				height: 30px;
-				border-bottom: 5px solid lightgreen;
-				border-right: 5px solid lightgreen;
-				transform: rotate(45deg);
-				margin: -10px;
-				animation: animate 2s infinite;
-			}
-			span:nth-child(2) {
-				animation-delay: -0.2s;
-			}
-			span:nth-child(3) {
-				animation-delay: -0.4s;
-			}
-		}
-	}
-	.colum-2 {
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		background-color: #181715;
-		// box-shadow: inset 0px 150px 150px -10px $bg-gark-color, inset 0px -150px 150px -10px $bg-gark-color;
-		padding-top: 80px;
-		padding-bottom: 80px;
-		.card-container {
-			width: 80%;
-			max-width: 1600px;
-			height: auto;
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-			flex-wrap: wrap;
-			margin: 0 auto;
-		}
-	}
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  .colum-1 {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: url(../../../../common/images/bg2.png);
+    background-color: $general-gark-background-color;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: cover;
+    box-shadow: inset 0px 150px 150px -10px $general-gark-shadow-color,
+      inset 0px -150px 150px -10px $general-gark-shadow-color;
+    .main-title {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 50%;
+      height: auto;
+      padding: 15px;
+      margin: 0 auto;
+      margin-top: 130px;
+      color: $general-gark-text-color;
+      font-size: 80px;
+      font-weight: 900;
+      text-align: center;
+      border-width: 1px;
+      border-style: dotted;
+      border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $general-gark-border-color, rgba(0, 0, 0, 0)) 1 0%;
+    }
+    .main-info {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 35%;
+      height: auto;
+      padding: 10px;
+      margin: 0 auto;
+      margin-top: 25px;
+      color: $general-gark-text-color;
+      font-size: 18px;
+      font-weight: 900;
+      text-align: center;
+    }
+    .next {
+      position: absolute;
+      width: auto;
+      height: auto;
+      top: 80%;
+      right: 10%;
+      .arrow {
+        span {
+          display: block;
+          width: 30px;
+          height: 30px;
+          border-bottom: 1px solid $general-gark-text-color;
+          border-right: 1px solid $general-gark-text-color;
+          transform: rotate(45deg);
+          margin: -10px;
+          animation: animate 2s infinite;
+        }
+        span:nth-child(2) {
+          animation-delay: -0.2s;
+        }
+        span:nth-child(3) {
+          animation-delay: -0.4s;
+        }
+      }
+    }
+  }
+  .colum-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: $general-gark-background-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    .card-container {
+      width: 80%;
+      max-width: 1600px;
+      height: auto;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: 0 auto;
+    }
+  }
 }
