--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -17,3 +17,12 @@ $general-gark-border-color: #edf0f283;
 $card-dark-text-color: #edf0f2;
 $card-dark-border-color: rgba(101, 255, 101, 0.315);
 
+/**---auth---**/
+$auth-dark-text-color: #edf0f2;
+$auth-dark-shadow-color: rgba(0,0,0,0.1);
+$auth-dark-hover-color: rgba(228, 15, 15, 0.233);
+$auth-dark-border-color: rgba(255, 255, 255, 0.315);
+$auth-dark-border-yes-color: rgba(0, 255, 0, 0.315);
+$auth-dark-border-no-color: rgba(255, 0, 0, 0.315);
+
+
