--- a/src/modules/general/pages/general/General.scss
+++ b/src/modules/general/pages/general/General.scss
@@ -45,7 +45,7 @@
       font-weight: 900;
       text-align: center;
       border-width: 1px;
-      border-style: dotted;
+      border-style: solid;
       border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $general-gark-border-color, rgba(0, 0, 0, 0)) 1 0%;
     }
     .main-info {
