--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -24,5 +24,6 @@ $auth-dark-hover-color: rgba(228, 15, 15, 0.233);
 $auth-dark-border-color: rgba(255, 255, 255, 0.315);
 $auth-dark-border-yes-color: rgba(0, 255, 0, 0.315);
 $auth-dark-border-no-color: rgba(255, 0, 0, 0.315);
+$auth-gark-background-color: #181818;
 
 
