--- a/src/modules/general/pages/auth/Auth.scss
+++ b/src/modules/general/pages/auth/Auth.scss
@@ -6,7 +6,7 @@
 	justify-content: center;
 	width: auto;
 	height: auto;
-	background: url(../../../../common/images/bg2.png);
+	background: url(../../../general/assets/bg2.png);
     background-color: $general-gark-background-color;
     background-repeat: no-repeat;
     background-position-x: center;
