--- a/src/modules/general/pages/general/General.scss
+++ b/src/modules/general/pages/general/General.scss
@@ -24,7 +24,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background: url(../../../../common/images/bg2.png);
+    background: url(../../../general/assets/bg2.png);
     background-color: $general-gark-background-color;
     background-repeat: no-repeat;
     background-position-x: center;
