--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -1,32 +1,5 @@
-/* gark версия исопльзуется когда включенна кнопка  */
-
-/**---header---**/
-$header-gark-text-color: #edf0f2;
-$header-gark-background-color: #181818;
-$header-gark-border-color: black;
-$header-gark-button-color: rgba(17, 17, 17, 0.712);
-$header-gark-button-color-hover: rgba(36, 36, 36, 0.712);
-
-/**---general---**/
-$general-gark-background-color: #181818;
-$general-gark-text-color: #edf0f2;
-$general-gark-shadow-color: #181818;
-$general-gark-border-color: #edf0f283;
-
-/**---card---**/
-$card-dark-text-color: #edf0f2;
-$card-dark-border-color: rgba(101, 255, 101, 0.315);
-
-/**---auth---**/
-$auth-dark-text-color: #edf0f2;
-$auth-dark-shadow-color: rgba(0,0,0,0.15);
-$auth-dark-hover-color: rgba(228, 15, 15, 0.233);
-$auth-dark-border-color: rgba(255, 255, 255, 0.315);
-$auth-dark-border-yes-color: rgba(0, 255, 0, 0.315);
-$auth-dark-border-no-color: rgba(255, 0, 0, 0.315);
-$auth-gark-background-color: #181818;
-
-/*--- regulations---*/
-$regulations-dark-text-color: #edf0f2;
-$regulations-dark-border-color: rgba(255, 255, 255, 0.315);
-$regulations-gark-button-color: rgba(17, 17, 17, 0.99);
+$color-1: #e4007f;
+$color-2: #011625;
+$color-3: #f4f4f4;
+$color-4: #FFB400;
+$color-5: #FFD46E;
