--- a/src/App.scss
+++ b/src/App.scss
@@ -1,36 +1,67 @@
+@import "./Variables.scss";
+
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    height: 100%;
+  height: 100%;
+  background: $color-1;
 }
 
 div#root {
-    height: 100%;
+  height: 100%;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 *::-webkit-scrollbar {
-    width: 8px;
-    background-color: rgb(32, 42, 48);
+  width: 8px;
+  background-color: rgb(32, 42, 48);
 }
 
 *::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: rgb(23, 55, 75);
-    // outline: 1px solid rgb(85, 115, 145);
-    transition: 2s all ease;
+  background-color: rgb(23, 55, 75);
+  // outline: 1px solid rgb(85, 115, 145);
+  transition: 2s all ease;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(34, 78, 105);
+  background-color: rgb(34, 78, 105);
 }
 
+.lin-top {
+  height: 200px;
+  width: 100%;
+  background: #e4007f;
+  background: linear-gradient(180deg, #e4007f 0%, rgba(228, 0, 127, 0) 100%);
+  background: -webkit-linear-gradient(
+    180deg,
+    #e4007f 0%,
+    rgba(228, 0, 127, 0) 100%
+  );
+  background: -moz-linear-gradient(
+    180deg,
+    #e4007f 0%,
+    rgba(228, 0, 127, 0) 100%
+  );
+}
+.lin-bot {
+  height: 200px;
+  width: 100%;
+  background: #011625;
+  background: linear-gradient(0deg, #011625 0%, rgba(1, 22, 37, 0) 100%);
+  background: -webkit-linear-gradient(
+    0deg,
+    #011625 0%,
+    rgba(1, 22, 37, 0) 100%
+  );
+  background: -moz-linear-gradient(0deg, #011625 0%, rgba(1, 22, 37, 0) 100%);
+}
