--- a/src/modules/general/components/regulations/Regulations.scss
+++ b/src/modules/general/components/regulations/Regulations.scss
@@ -15,12 +15,12 @@
     background-color: transparent;
     font-size: 18px;
     font-weight: 500;
-    border: 1px solid $regulations-dark-border-color;
+    border: 1px solid red;
     border-radius: 10px;
     width: 50%;
     height: 50px;
     line-height: 50px;
-    color: $regulations-dark-text-color;
+    color: red;
     outline: none;
     cursor: pointer;
   }
@@ -41,14 +41,14 @@
     .modal-content {
       position: absolute;
       top: 5%;
-      background-color: $regulations-gark-button-color;
+      background-color: red;
       padding: 14px 28px;
       border-radius: 3px;
       width: 1000px;
       height: 800px;
       z-index: 1100;
       .reg-header {
-        color: $regulations-dark-text-color;
+        color: red;
         font-size: 24px;
         font-weight: 500;
         text-align: center;
@@ -57,7 +57,7 @@
       }
       .close-regulation {
         position: absolute;
-        color: $regulations-dark-text-color;
+        color: red;
         font-weight: 600;
         font-size: 18px;
         top: 10px;
