--- a/src/modules/general/pages/auth/Auth.scss
+++ b/src/modules/general/pages/auth/Auth.scss
@@ -7,11 +7,11 @@
 	width: auto;
 	height: auto;
 	background: url(../../../general/assets/bg2.png);
-    background-color: $general-gark-background-color;
+    background-color: red;
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: cover;
     background-attachment: fixed;
-    box-shadow: inset 0px 150px 150px -10px $general-gark-shadow-color,
-        inset 0px -150px 150px -10px $general-gark-shadow-color;
+    box-shadow: inset 0px 150px 150px -10px red,
+        inset 0px -150px 150px -10px red;
 }
