--- a/src/modules/general/pages/general/General.scss
+++ b/src/modules/general/pages/general/General.scss
@@ -1,109 +1,120 @@
 @import "../../../../Variables.scss";
 
-@keyframes animate {
-  0% {
-    opacity: 0;
-    transform: rotate(45deg) translate(-20px, -20px);
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    transform: rotate(45deg) translate(20px, 20px);
-  }
-}
-
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  .colum-1 {
+  .row-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background: url(../../../general/assets/bg2.png);
-    background-color: $general-gark-background-color;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-size: cover;
-    box-shadow: inset 0px 150px 150px -10px $general-gark-shadow-color,
-      inset 0px -150px 150px -10px $general-gark-shadow-color;
-    .main-title {
+    background: url(../../../general/assets/img1.jpg);
+    background-color: $color-1;
+    .main-content {
       display: flex;
-      flex-direction: row;
-      justify-content: center;
-      width: 50%;
-      height: auto;
-      padding: 15px;
-      margin: 0 auto;
-      margin-top: 130px;
-      color: $general-gark-text-color;
-      font-size: 80px;
-      font-weight: 900;
-      text-align: center;
-      border-width: 1px;
-      border-style: solid;
-      border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $general-gark-border-color, rgba(0, 0, 0, 0)) 1 0%;
-    }
-    .main-info {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      width: 35%;
-      height: auto;
-      padding: 10px;
-      margin: 0 auto;
-      margin-top: 25px;
-      color: $general-gark-text-color;
-      font-size: 18px;
-      font-weight: 900;
-      text-align: center;
-    }
-    .next {
-      position: absolute;
-      width: auto;
-      height: auto;
-      top: 80%;
-      right: 10%;
-      .arrow {
-        span {
-          display: block;
-          width: 30px;
-          height: 30px;
-          border-bottom: 1px solid $general-gark-text-color;
-          border-right: 1px solid $general-gark-text-color;
-          transform: rotate(45deg);
-          margin: -10px;
-          animation: animate 2s infinite;
+      flex-direction: column;
+      height: 100%;
+      width: 100%;
+      .main-h1 {
+        margin-top: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 0;
+        width: auto;
+        height: 160px;
+        line-height: 160px;
+        font-weight: 400;
+        font-size: 110px;
+        color: $color-3;
+        .colored-title-span-1 {
+          color: $color-4;
+          font: inherit;
+          overflow: hidden;
+          position: relative;
         }
-        span:nth-child(2) {
-          animation-delay: -0.2s;
+        .colored-title-span-2 {
+          color: $color-1;
+          font: inherit;
+          overflow: hidden;
+          position: relative;
         }
-        span:nth-child(3) {
-          animation-delay: -0.4s;
-        }
+      }
+      .main-h3 {
+        height: auto;
+        width: auto;
+        font-weight: 400;
+        font-size: 25px;
+        height: 30px;
+        line-height: 30px;
+        margin: 0 auto;
+        color: $color-3;
+      }
+      .button-container {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        margin-top: 55px;
+        height: 75px;
       }
     }
   }
-  .colum-2 {
+  .row-2 {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    background-color: $general-gark-background-color;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    .card-container {
-      width: 80%;
-      max-width: 1600px;
-      height: auto;
+    width: 100%;
+    height: auto;
+    background: $color-2;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    .content-info {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      margin: 0 auto;
+      justify-content: space-evenly;
+      height: 600px;
+      width: 100%;
+      color: $color-3;
+      .info-style {
+        width: 50%;
+        max-width: 550px;
+        height: 100%;
+        padding: 50px;
+        .h2-info {
+          font-weight: 400;
+          font-size: 48px;
+          height: 60px;
+          line-height: 60px;
+          margin-top: 35px;
+          margin-bottom: 35px;
+        }
+        .h2-left {
+          text-align: left;
+        }
+        .h2-right {
+          text-align: right;
+        }
+        .h4-left {
+          text-align: left;
+        }
+        .h4-right {
+          text-align: right;
+        }
+        .h4-info {
+          font-weight: 400;
+          font-style: normal;
+          font-size: 20px;
+          line-height: 24px;
+        }
+      }
+      .info-img {
+        width: 50%;
+        max-width: 550px;
+        height: 100%;
+        padding: 50px;
+      }
     }
   }
 }
