много всего, изминение папок, изминение страниц, и тд...

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -1,5 +1,10 @@
 $color-1: #e4007f;
 $color-2: #011625;
 $color-3: #f4f4f4;
-$color-4: #FFB400;
-$color-5: #FFD46E;
+$color-4: #ffb400;
+$color-5: rgba(228, 0, 125, 0.5);
+$color-6: #ffd46e;
+$color-7: #000c14;
+$color-8: #00ff00;
+$color-9: #ff0000;
+$color-10: rgba(0, 0, 0, 0.45);
