--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -8,3 +8,5 @@ $color-7: #000c14;
 $color-8: #00ff00;
 $color-9: #ff0000;
 $color-10: rgba(0, 0, 0, 0.45);
+$color-11: rgba(0, 6, 11, 0.9);
+$color-12: #32cd32;
