--- a/src/modules/components/auth-comp/Auth-comp.scss
+++ b/src/modules/components/auth-comp/Auth-comp.scss
@@ -1,8 +1,34 @@
 @import "../../../Variables.scss";
 
-.error{
-  color: red;
+@keyframes opacityBlock {
+  0% {
+    width: 0px;
+    margin: 0;
+  }
+  50% {
+    opacity: 0;
+    margin: 25px;
+  }
+  75% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+    width: 550px;
+    margin: 50px;
+    margin-top: 7%;
+  }
 }
+@keyframes opacityButton {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .auth-block {
   display: flex;
   justify-content: space-around;
@@ -13,6 +39,9 @@
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+  top: -175px;
+  z-index: 2000;
   .container {
     width: auto;
     height: auto;
@@ -34,85 +63,90 @@
         font-weight: 600;
         margin-bottom: 15px;
       }
-      .line {
-        position: relative;
-        margin-top: 20px;
-        margin-bottom: 15px;
+      form {
         display: flex;
-        height: auto;
-        flex-direction: row;
-        justify-content: flex-start;
-        border-width: 2px;
-        border-bottom-style: solid;
-        border-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 0),
-            $color-3,
-            rgba(0, 0, 0, 0)
-          )
-          1 0%;
-        .icon-span {
-          width: 50px;
-          height: 50px;
-          padding: 8px;
+        flex-direction: column;
+        .error {
+          // position: relative;
+          bottom: 25px;
+          width: 225px;
+          height: 20px;
+          line-height: 20px;
+          margin: 0 auto;
+          // bottom: 25px;
+          color: $color-9;
+          transition: all 0.85;
         }
-        .input-custom {
-          min-width: 500px;
-          max-width: 500px;
-          min-height: 50px;
-          max-height: 150px;
+        .line {
+          position: relative;
+          margin-top: 10px;
+          margin-bottom: 10px;
+          display: flex;
           height: auto;
-          outline: none;
-          border: none;
-          padding: 15px;
-          background: transparent;
-          font-size: 16px;
-          font-weight: 500;
-          color: $color-8;
-          transition: all 0.5 ease;
-          :active,
-          :hover {
+          flex-direction: row;
+          justify-content: flex-start;
+          border-width: 2px;
+          border-bottom-style: solid;
+          border-image: linear-gradient(
+              to right,
+              rgba(0, 0, 0, 0),
+              $color-3,
+              rgba(0, 0, 0, 0)
+            )
+            1 0%;
+          .icon-span {
+            width: 50px;
+            height: 50px;
+            padding: 8px;
+          }
+          .input-custom {
+            min-width: 500px;
+            max-width: 500px;
+            min-height: 50px;
+            max-height: 150px;
+            height: auto;
             outline: none;
             border: none;
-          }
-          option {
-            color: $color-1;
-            background-color: $color-2;
             padding: 15px;
+            background: transparent;
+            font-size: 16px;
+            font-weight: 500;
+            color: $color-8;
+            transition: all 0.5 ease;
+            :active,
+            :hover {
+              outline: none;
+              border: none;
+            }
+            option {
+              color: $color-12;
+              background-color: $color-2;
+              padding: 15px;
+            }
           }
         }
-        .war-span {
-          width: 50px;
-          height: 50px;
-          line-height: 50px;
-          font-size: 28px;
-          text-align: center;
-          font-weight: 500;
-          color: $color-3;
-          cursor: help;
+        .no {
+          border-width: 2px;
+          border-bottom-style: solid;
+          border-image: linear-gradient(
+              to right,
+              rgba(0, 0, 0, 0),
+              $color-9,
+              rgba(0, 0, 0, 0)
+            )
+            1 0%;
         }
-      }
-      .no {
-        border-width: 2px;
-        border-bottom-style: solid;
-        border-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 0),
-            $color-9,
-            rgba(0, 0, 0, 0)
-          )
-          1 0%;
-      }
-      .yes {
-        border-width: 2px;
-        border-bottom-style: solid;
-        border-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 0),
-            $color-8,
-            rgba(0, 0, 0, 0)
-          )
-          1 0%;
+        .yes {
+          border-width: 2px;
+          border-bottom-style: solid;
+          border-image: linear-gradient(
+              to right,
+              rgba(0, 0, 0, 0),
+              $color-8,
+              rgba(0, 0, 0, 0)
+            )
+            1 0%;
+        }
       }
       .warn-block {
         display: flex;
@@ -183,13 +217,13 @@
   }
 
   .card-visual {
-    margin: 50px;
-    margin-top: 7%;
-    width: auto;
+    width: 0px;
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    transition: all 0.85 ease-in-out;
+    opacity: 0;
     .card-vis-block {
       min-width: 550px;
       max-width: 550px;
@@ -240,6 +274,9 @@
         flex-direction: column;
         width: auto;
         height: auto;
+        .hidden{
+          opacity: 0;
+        }
       }
       .player-inf {
         color: $color-3;
@@ -249,10 +286,16 @@
         font-weight: 500;
         width: auto;
         height: auto;
-        label{
-          color: $color-1;
+        label {
+          color: $color-12;
         }
       }
     }
+  }
+  .card-visual-show {
+    animation: opacityBlock 0.85s both ease;
+  }
+  .card-button-show {
+    animation: opacityButton 0.85s both ease;
   }
 }
