--- a/src/modules/components/auth-comp/Auth-comp.scss
+++ b/src/modules/components/auth-comp/Auth-comp.scss
@@ -22,10 +22,13 @@
 @keyframes opacityButton {
   0% {
     opacity: 0;
+    height: 0;
+    width: 0;
   }
-
   100% {
     opacity: 1;
+    height: 75px;    
+    width: 250px;
   }
 }
 
@@ -42,6 +45,17 @@
   position: relative;
   top: -175px;
   z-index: 2000;
+  .error {
+    bottom: 25px;
+    width: auto;
+    max-width: 275px;
+    min-width: 225px;
+    height: 20px;
+    line-height: 20px;
+    margin: 0 auto;
+    color: $color-9;
+    transition: all 0.85;
+  }
   .container {
     width: auto;
     height: auto;
@@ -66,17 +80,6 @@
       form {
         display: flex;
         flex-direction: column;
-        .error {
-          // position: relative;
-          bottom: 25px;
-          width: 225px;
-          height: 20px;
-          line-height: 20px;
-          margin: 0 auto;
-          // bottom: 25px;
-          color: $color-9;
-          transition: all 0.85;
-        }
         .line {
           position: relative;
           margin-top: 10px;
@@ -125,28 +128,6 @@
             }
           }
         }
-        .no {
-          border-width: 2px;
-          border-bottom-style: solid;
-          border-image: linear-gradient(
-              to right,
-              rgba(0, 0, 0, 0),
-              $color-9,
-              rgba(0, 0, 0, 0)
-            )
-            1 0%;
-        }
-        .yes {
-          border-width: 2px;
-          border-bottom-style: solid;
-          border-image: linear-gradient(
-              to right,
-              rgba(0, 0, 0, 0),
-              $color-8,
-              rgba(0, 0, 0, 0)
-            )
-            1 0%;
-        }
       }
       .warn-block {
         display: flex;
@@ -167,14 +148,14 @@
     .reg-2 {
       width: auto;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
       padding: 15px;
       .check-block {
         z-index: 500;
         margin: 20px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         input[type="checkbox"] {
           display: none;
@@ -225,6 +206,8 @@
     transition: all 0.85 ease-in-out;
     opacity: 0;
     .card-vis-block {
+      display: flex;
+      flex-direction: column;
       min-width: 550px;
       max-width: 550px;
       min-height: 350px;
@@ -233,22 +216,6 @@
       border-radius: 15px;
       background: $color-10;
       position: relative;
-      .reset {
-        position: absolute;
-        width: 50px;
-        height: 30px;
-        padding: auto;
-        line-height: 30px;
-        right: 35px;
-        top: 10px;
-        font-size: 14px;
-        font-weight: 700;
-        outline: none;
-        background: transparent;
-        color: $color-3;
-        border: none;
-        cursor: pointer;
-      }
       .block-l-1 {
         display: flex;
         flex-direction: row;
@@ -291,11 +258,53 @@
         }
       }
     }
+    .style-button {
+      width: 300px;
+      height: 75px;
+      line-height: 75px;
+      font-size: 30px;
+      background-color: $color-4;
+      border-radius: 22px;
+      border: none;
+      margin: 0 auto;
+      margin-top: 50px;
+      overflow: hidden;
+      position: relative;
+      cursor: pointer;
+      opacity: 0;
+    }
+    .style-button:before {
+      content: " ";
+      display: block;
+      width: 200px;
+      height: 40px;
+      background: $color-6;
+      position: absolute;
+      top: -10px;
+      left: -200px;
+      transform: rotate(-45deg);
+      transition: all 0.85s ease-in-out;
+      animation: shine 3s infinite ease;
+    }
+    .style-button:after {
+      content: " ";
+      display: block;
+      width: 200px;
+      height: 30px;
+      background: $color-6;
+      position: absolute;
+      top: -10px;
+      left: -120px;
+      transform: rotate(-45deg);
+      transition: all 0.85s ease-in-out;
+      animation: shine 3s infinite ease;
+    } 
   }
   .card-visual-show {
     animation: opacityBlock 0.85s both ease;
   }
   .card-button-show {
     animation: opacityButton 0.85s both ease;
-  }
+  } 
 }
+
