--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -10,3 +10,12 @@ $color-9: #ff0000;
 $color-10: rgba(0, 0, 0, 0.45);
 $color-11: rgba(0, 6, 11, 0.9);
 $color-12: #32cd32;
+$color-13: rgba(122, 152, 154, 0.45);
+$color-14: #161d22;
+$color-15: #0a1217;
+
+$color-16: #ff8dcc;
+$color-17: #ffb400;
+$color-18: #ff4444;
+$color-19: #32cd32;
+$color-20: #47ffe9;
