fix profile - copy ip

--- a/src/modules/components/my-profile/My-profile.scss
+++ b/src/modules/components/my-profile/My-profile.scss
@@ -92,8 +92,8 @@
      height: 30px;
      width: 15px;
      position: absolute;
-     top: 10;
-     left: 10px;
+     top: 17px;
+
     }    
    }
    .profile-application-not-submitted {
